# musical-typer-rust

./: Cargo.toml
score/: sampleScore.tsc
src/: main.rs  view.rs
src/model/: game.rs
src/model/exp/scoremap/: parser.rs
src/model/exp/scoremap/parser/: processor.rs
src/model/exp/scoremap/sections/: section.rs
src/model/exp/scoremap/sections/section/note/: sentence.rs
src/model/exp/scoremap/sections/section/note/sentence/roman/: roman_char.rs  roman_str.rs
src/model/exp/time/: minute_second.rs  seconds.rs
src/model/game/: tests.rs
src/view/: game_view.rs  player.rs  result_view.rs
src/view/components/: button.rs  header.rs  stats.rs
src/view/game_view/: whole.rs
src/view/game_view/whole/: finder.rs  keyboard.rs
