[package]
name = "musical-typer-rust"
version = "0.1.0"
authors = ["MikuroXina <ryosukadnak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
rand = "0.8.3"
readonly = "0.2.0"
rich-sdl2-rust = { version = "0.11.0", features = ["ttf", "mixer"] }
